More Mobile Spacing Fixes

--- a/assets/sass/common.sass
+++ b/assets/sass/common.sass
@@ -80,6 +80,7 @@ body.loading > *:not(#body-loader)
 		box-shadow: 4px 4px $dark
 		transition: all 0.2s
 		z-index: 5
+		padding: 10px
 
 		&.hover
 			border: 1px solid $link-yellow
@@ -91,7 +92,7 @@ body.loading > *:not(#body-loader)
 
 .page-title
 	@extend %center-transform
-	top: 21vh
+	top: 22%
 	position: fixed
 	font-size: 100%
 	font-weight: 400
@@ -145,7 +146,7 @@ main
 
 	#links
 		position: relative
-		bottom: 7.5em
+		bottom: 5.5em
 		z-index: 0
 
 		a
