--- a/assets/sass/design.sass
+++ b/assets/sass/design.sass
@@ -59,7 +59,7 @@ main.design
 		align-items: center
 
 	#loader-icon
-		margin-top: 14vh
+		margin-top: 12vh
 
 	#loader-progress
 		font-family: $monospace
