--- a/assets/sass/project.sass
+++ b/assets/sass/project.sass
@@ -58,7 +58,7 @@ main.project
 	.slick-dots
 		position: fixed
 		left: 50%
-		top: 25%
+		margin-top: -10px
 		transform: translateX(-66.6%)
 
 		li
@@ -70,7 +70,6 @@ main.project
 			width: 1px
 			height: 1px
 			background-color: rgba(0, 0, 0, 0.4)
-			box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4)
 			border-radius: 100%
 
 			button
@@ -85,7 +84,7 @@ main.project
 	@media #{$portrait}
 		main.project
 			#large-title
-				bottom: -10px
+				bottom: -1px
 				width: 120%
 				left: -15px
 				font-size: 5em
@@ -103,7 +102,7 @@ main.project
 				width: 100%
 
 				h2
-					font-size: 200%
+					font-size: 150%
 
 				p
 					font-size: 80%
